# resident-review-automation

./: .gitignore  LICENSE  README.md  README.txt  output.json  pyproject.toml  setup.ps1  todo.md
src/: auto.py  constants.py  coordinate.py  diff.py  logging_config.py  main.py  prod_tesseract_testing.ipynb  screen_parse.py  screen_types.py  state.py  table_generation.ipynb  util.py
